<resources>
    <string name="app_name">Task Management</string>

    <string name="manage_projects">Manage Projects</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="email_error">Enter a valid email</string>
    <string name="password_length_error">Password must have at least 5 characters</string>
    <string name="password_error">Password do not match</string>
    <string name="connection_error">No internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dashboard">Dashboard</string>
    <string name="projects">Projects</string>
    <string name="my_tasks">My Tasks</string>
    <string name="scheduled_tasks">Scheduled Tasks</string>
    <string name="project_details">Project Details</string>

    <string name="loading_projects_error">Error loading projects</string>
    <string name="new_project">New project</string>
    <string name="new_task_list">New Task List</string>
    <string name="title">Title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_new">Create New</string>

    <string name="delete_project">Delete Project</string>
    <string name="confirm_dialog_title">Are you sure?</string>
    <string name="project_deleted_message">Project Deleted</string>
</resources>