<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_project"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:hint="@string/name"
            android:layout_marginTop="8dp"
            android:inputType="text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_cancel"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/red"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:clickable="true"
                android:focusable="true" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tv_ok"
                android:text="@string/ok"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
</layout>